# sevaforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  dashboard-preview.html  docker-compose.monitoring.yml  forgeflow-animated-architecture.html  forgeflow-animated-physical-architecture.html  forgeflow-architecture.mermaid  forgeflow-logical-architecture.jsx  gcp-sa-key.json  mcp-config.yaml  pyproject.toml  test_week2.sh  test_week3.sh
.github/workflows/: cd.yml  ci.yml  cost-shutdown.yml  create-milestones.yml  forgeflow-ci.yml  gke-scheduler.yml  gke-teardown.yml  security-scan.yml  terraform-gcp.yml  terraform.yml  test.yml
.sevaforge/: deployment-intent.yaml
agents/: __init__.py  base_agent.py  cd_agent.py  ci_agent.py  deployment_agent.py  discovery_agent.py  documentation_agent.py  e2e_agent.py  generation_agent.py  iac_agent.py  monitoring_agent.py  normalization_agent.py
cli/: forgeflow.py
config/: forgeflow-config.yaml
core/: __init__.py  display.py  mission_control.py
deploy/cost/: README.md
deploy/observability/: README.md  alerts.yaml  grafana-dashboard.json  prometheus-values.yaml  servicemonitor.yaml  slo.yaml
deploy/secrets/: DEPLOYMENT_SECRETS_GUIDE.md  bootstrap.sh  inventory.yaml
deploy/security/: iam-minimization.md  networkpolicy.yaml  pod-security.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  GITHUB_SETUP.md  IAM_POLICIES.md
forgeflow/: .flake8  .gitignore  ARCHITECTURE_CHANGES.md  Dockerfile  LOCAL_SETUP.md  README.md  RELEASE_NOTES.md  mcp-config.yaml
forgeflow/agents/: __init__.py  base_agent.py  bridge_agent.py  cd_agent.py  ci_agent.py  code_review_agent.py  create_diagram.py  deploy_intent_agent.py  deploy_orchestrator_agent.py  deploy_readiness_agent.py  deploy_validator_agent.py  deployment_agent.py  discovery_agent.py  documentation_agent.py  e2e_agent.py  generation_agent.py  iac_agent.py  iam_agent.py  lifecycle_agent.py  monitoring_agent.py  normalization_agent.py  scaffolding_agent.py  secrets_agent.py  security_agent.py  testing_agent.py
forgeflow/api/: __init__.py
forgeflow/cli/: forgeflow.py
forgeflow/config/: forgeflow-config.yaml
forgeflow/core/: display.py  intelligence_maturity.py  mission_control.py  orchestrator.py  run_history.py
forgeflow/docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DATA_FLOW.md  DEPLOYMENT_MODES.md  GREENFIELD.md  OCI_DEPLOY.md  PIPELINE_STAGES.md  USER_GUIDE.md
forgeflow/gui/: dashboard_server.py
forgeflow/monitoring/: prometheus.yml
forgeflow/schemas/: deployment_intent_schema.yaml
forgeflow/scripts/: oci_setup_apikey.sh  push_github_secrets.sh
forgeflow/terraform/: main.tf  variables.tf
forgeflow/tests/: test_cli.py  test_deploy_intent.py  test_mcp_servers.py  (+5 more)
forgeflow_cloud/: mcp-config.yaml  requirements.txt
forgeflow_hybrid/: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mcp-config.yaml
forgeflow_local/: .dockerignore  .gitignore  AI_ENHANCEMENT_SUMMARY.md  AI_INTEGRATION_REPORT.md  ARCHITECTURE_CHANGES.md  FORGEFLOW_ENHANCEMENTS.md  LOCAL_SETUP.md  RELEASE_NOTES.md  __init__.py  docker-compose.yml  mcp-config.yaml
forgeflow_local/forgeflow_local/: pyproject.toml  requirements.txt
forgeflow_local/forgeflow_local/agents/: discovery_agent.py  documentation_agent.py
forgeflow_local/forgeflow_local/config/: forgeflow-config.yaml
forgeflow_local/forgeflow_local/core/: remote_client.py
forgeflow_local/forgeflow_local/docs/: CONTRIBUTING.md  USER_GUIDE.md
forgeflow_local/forgeflow_local/mcp_servers/deployment_mcp/: server.py
forgeflow_local/forgeflow_local/mcp_servers/observability_mcp/: server.py
forgeflow_local/forgeflow_local/tests/: conftest.py
k8s/: secret.yaml
monitoring/: alertmanager.yml
scripts/: bootstrap-secrets.sh  cleanup_oci_orphans.sh  deploy.sh  find_node_image.sh  full_pipeline.sh  setup_oci_key.sh  test-pipeline-local.py  verify-iam.sh
terraform/: main.tf  variables.tf
tests/: test_cli.py  test_mcp_servers.py
ui/: index.html
(+230 files in other folders)
